--- a/sus.html
+++ b/sus.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Project - Dutch Rewilding</title>
+    <title>Sustainability - Dutch Rewilding</title>
 </head>
 
 <body>
@@ -23,14 +23,14 @@
         <div id="mySidebar" class="sidebar">
             <a href="index.html">Project</a>
             <a href="sus.html">Sustainability</a>
-            <!--<a href="form.html">Form</a>-->
+            <a href="form.html">sus</a>
         </div>
         <!-- LINKS END-->
     </div>
     <div>
         <div class="introText">
-            <h1>Dutch Rewilding</h1>
-            <p>"Where intergration meets innovation"</p>
+            <h1>sustainable</h1>
+            <p>"test"</p>
         </div>
     </div>
 </body>
