--- a/index.html
+++ b/index.html
@@ -9,29 +9,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Project - Dutch Rewilding</title>
+    <title>Home - Dutch Rewilding</title>
 </head>
 
 <body>
+    <img src="../assets/images/project.png" class="imgProject" alt="Project">
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
             </div>
         </div>
 
+        <img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank">
+
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
             <a href="index.html">Project</a>
-            <a href="sus.html">Sustainability</a>
-            <!--<a href="form.html">Form</a>-->
+            <a href="sustainability.html">Sustainability</a>
         </div>
         <!-- LINKS END-->
     </div>
-    <div>
-        <div class="introText">
-            <h1>Dutch Rewilding</h1>
-            <p>"Where intergration meets innovation"</p>
-        </div>
+    <div class="introText">
+        <h1>Dutch Rewilding</h1>
+        <p>"Where intergration meets innovation"</p>
+    </div>
+    <div class="footer">
+        <p>test</p>
     </div>
 </body>
 
