--- a/sustainability.html
+++ b/sustainability.html
@@ -9,29 +9,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Form - Dutch Rewilding</title>
+    <title>Sustainability - Dutch Rewilding</title>
 </head>
 
 <body>
+    <img src="../assets/images/leenheerenpolder.jpg" class="imgLeenheerenpolder" alt="Leenheerenpolder">
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
             </div>
         </div>
 
+        <img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank">
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
             <a href="index.html">Project</a>
-            <a href="sus.html">Sustainability</a>
-            <a href="form.html">sus</a>
+            <a href="sustainability.html">Sustainability</a>
         </div>
         <!-- LINKS END-->
     </div>
-    <div>
-        <div class="introText">
-            <h1>Frog</h1>
-            <p>"sus"</p>
-        </div>
+    <div class="introText">
+        <h1>Sustainability</h1>
+        <p>""</p>
+    </div>
+    <div class="footer">
+        <p>test</p>
     </div>
 </body>
 
