--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/js/script.js"></script>
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
     <link rel="icon" href="./assets/images/logo.png">
     <meta charset="UTF-8">
@@ -20,22 +19,27 @@
             </div>
         </div>
 
-        <img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank">
+        <a href="index.html"><img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank"></a>
 
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
-            <a href="index.html">Project</a>
+            <a href="index.html">Home</a>
+            <a href="project.html">Project</a>
             <a href="sustainability.html">Sustainability</a>
         </div>
         <!-- LINKS END-->
     </div>
+
     <div class="introText">
-        <h1>Dutch Rewilding</h1>
+        <h1>Project Flauna</h1>
         <p>"Where intergration meets innovation"</p>
     </div>
+
     <div class="footer">
         <p>test</p>
     </div>
 </body>
+
+<script src="./assets/js/script.js"></script>
 
 </html>
