--- a/sustainability.html
+++ b/sustainability.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/js/script.js"></script>
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
     <link rel="icon" href="./assets/images/logo.png">
     <meta charset="UTF-8">
@@ -13,28 +12,31 @@
 </head>
 
 <body>
-    <img src="../assets/images/leenheerenpolder.jpg" class="imgLeenheerenpolder" alt="Leenheerenpolder">
+    <img src="../assets/images/project.png" class="imgProject" alt="Project">
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
             </div>
         </div>
 
-        <img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank">
+        <a href="index.html"><img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank"></a>
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
-            <a href="index.html">Project</a>
+            <a href="index.html">Home</a>
+            <a href="project.html">Project</a>
             <a href="sustainability.html">Sustainability</a>
         </div>
         <!-- LINKS END-->
     </div>
     <div class="introText">
         <h1>Sustainability</h1>
-        <p>""</p>
+        <p>"Information"</p>
     </div>
     <div class="footer">
         <p>test</p>
     </div>
 </body>
+
+<script src="./assets/js/script.js"></script>
 
 </html>
