--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home - Dutch Rewilding</title>
+    <title>Home - Project Flauna</title>
 </head>
 
 <body>
-    <img src="../assets/images/project.png" class="imgProject" alt="Project">
+    <img src="https://architectenweb.nl/media/illustrations/2019/11/f07a774e-e332-46ea-a5c2-386ecd7b06e2_400.jpg" class="imgProject" alt="Project">
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
@@ -30,14 +30,14 @@
         <!-- LINKS END-->
     </div>
 
-    <div class="introText">
+    <div class="introTexti">
         <h1>Project Flauna</h1>
         <p>"Where intergration meets innovation"</p>
     </div>
 
-    <div class="footer">
-        <p>test</p>
-    </div>
+    <!--<div class="footer">
+        //<p>test</p>
+    //</div>-->
 </body>
 
 <script src="./assets/js/script.js"></script>
