--- a/sustainability.html
+++ b/sustainability.html
@@ -4,15 +4,16 @@
 <head>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/css/tabStyles.css">
     <link rel="icon" href="./assets/images/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sustainability - Dutch Rewilding</title>
+    <title>Sustainability - Project Flauna</title>
 </head>
 
 <body>
-    <img src="../assets/images/project.png" class="imgProject" alt="Project">
+    <!--<img src="../assets/images/project.png" class="imgProject" alt="Project">-->
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
@@ -28,13 +29,17 @@
         </div>
         <!-- LINKS END-->
     </div>
-    <div class="introText">
-        <h1>Sustainability</h1>
-        <p>"Information"</p>
+
+    <div class="face">
+        <div class="introTexts">
+            <h1>Sustainability</h1>
+            <p>"Information"</p>
+        </div>
+        <!-- <div class="footer">
+            <p>test</p>
+        </div> -->
     </div>
-    <div class="footer">
-        <p>test</p>
-    </div>
+
 </body>
 
 <script src="./assets/js/script.js"></script>
