about page, image styling

--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home - Project Flauna</title>
+    <title>About Us - Project Flauna</title>
 </head>
 
 <body>
-    <img src="https://architectenweb.nl/media/illustrations/2019/11/f07a774e-e332-46ea-a5c2-386ecd7b06e2_400.jpg" class="imgLeenheerenpolder" alt="Project">
+    <img src="https://architectenweb.nl/media/illustrations/2019/11/f07a774e-e332-46ea-a5c2-386ecd7b06e2_400.jpg" class="imgProject" alt="Project">
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
@@ -32,16 +32,23 @@
     </div>
 
     <div class="introText-i">
-        <h1>Project Flauna</h1>
-        <p>"Where intergration meets innovation"</p>
+        <h1>About Us</h1>
+    </div>
+    <div>
+        <h1>About Us</h1>
+        <p>We are Theo Eversdijk, Teodor Ivanov, Jesse van den Bos, Leonard Zengen and Jochem Dijkdrent. We are all following educations of the HZ University Of Applied Sciences. Four of us are following HBO-ICT and one of us is following Technical Engineering
+            and Managment. We have all signed up for a project week and have gotten a project by Zeelenberg Architectuur. They want us to develop a tool to measure the degree of sustainability. We decided that the best way to give the project it's
+            <!--form-->we should make a website, because our group consists of four ICT students. And that's where you are right now!
+        </p>
     </div>
 
-    <footer>
-    <a href="https://www.zeelenbergarchitectuur.nl/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFLQmnNtwp5KA/company-logo_200_200/0/1519889084713?e=2159024400&v=beta&t=B5CTgpvebl1Wq9Rd6F8GhouSdeLm7Inr7LBdSghEgXk" class="zeelenbergLogo" alt="Zeelenberg Logo"></a>
-</footer>
 
+
+
+    <div class="footer">
+        <p></p>
+    </div>
 </body>
-
 
 <script src="./assets/js/script.js"></script>
 
