--- a/project.html
+++ b/project.html
@@ -3,39 +3,40 @@
 
 <head>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/tabStyles.css">
+    <!-- <link rel="stylesheet" href="./assets/css/tabStyles.css"> -->
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
     <link rel="icon" href="./assets/images/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Concept - Project Flauna</title>
+    <title>Project - Project Flauna</title>
 </head>
 
 <body>
+    <img src="../assets/images/project.png" class="imgProject" alt="Project">
     <header class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
             </div>
         </div>
 
-        <a href="index.html"><img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank"></a>
+        <a href="index.html" target="_self"><img src="./assets/images/logo.png" class="logo" alt="Logo"></a>
 
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
-            <a href="index.html">Home</a>
-            <a href="project.html">Project</a>
-            <a href="sustainability.html">Sustainability</a>
+            <a href="index.html" target="_self">Home</a>
+            <a href="project.html" target="_self">Project</a>
+            <a href="sustainability.html" target="_self">Sustainability</a>
+            <a href="about.html" target="_self">About</a>
         </div>
         <!-- LINKS END-->
     </header>
 
     <div class="face">
         <div class="containerLayout">
-            <!--<img src="../assets/images/project.png" class="imgProject" alt="Project">-->
-            <div class="introTextp">
+            <div class="introText-p">
                 <h1>Project Leenheerenpolder</h1>
-                <p>Sustainability: <span id="percentage">30</span>%</p>
+                <p>Sustainability: <span id="percentage">70</span>%</p>
                 <p>Grade:<span id="grade" class="limegreen"></span></p>
             </div>
         </div>
@@ -54,16 +55,12 @@
                 and maybe a small lake, animals will feel like home and hopefully reproduce so there will be more wildlife in this area.<br><br> To strengthen the dyke there will be a pathway/road where people can walk/ ride around the area. To actually
                 realise this plan there is a need to reinforce the current dyke. If possible there will be a dam added too so it can regulate the water and keep everything inside the area protected.</p>
         </div>
-        <!--
-        <div class="footer">
-            <p>test</p>
-        </div>
-    -->
     </div>
 
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScBF-IeIOnjZV-jxzF9GxML21FldDLmvceScCe1Ob8nM32jzQ/viewform?usp=sf_link" target="_blank"><img src="./assets/images/qr.png" class="QRCode" alt="Form QR Code"></a>
 </body>
 
-<script src="./assets/js/script.js"></script>
-<script src="./assets/js/percentage.js"></script>
+<script src="./assets/js/script.js "></script>
+<script src="./assets/js/percentage.js "></script>
 
 </html>
