--- a/sustainability.html
+++ b/sustainability.html
@@ -4,7 +4,6 @@
 <head>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./assets/css/tabStyles.css">
     <link rel="icon" href="./assets/images/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,27 +12,59 @@
 </head>
 
 <body>
-    <!--<img src="../assets/images/project.png" class="imgProject" alt="Project">-->
+    <img src="../assets/images/steels.png" class="imgSteels" alt="House on Steels">
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
             </div>
         </div>
 
-        <a href="index.html"><img src="./assets/images/logo.png" class="logo" alt="Logo" target="_blank"></a>
+        <a href="index.html" target="_self"><img src="./assets/images/logo.png" class="logo" alt="Logo"></a>
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
-            <a href="index.html">Home</a>
-            <a href="project.html">Project</a>
-            <a href="sustainability.html">Sustainability</a>
+            <a href="index.html" target="_self">Home</a>
+            <a href="project.html" target="_self">Project</a>
+            <a href="sustainability.html" target="_self">Sustainability</a>
+            <a href="about.html" target="_self">About</a>
         </div>
         <!-- LINKS END-->
     </div>
 
     <div class="face">
-        <div class="introTexts">
+        <div class="introText-s">
             <h1>Sustainability</h1>
-            <p>"Information"</p>
+            <p>"How do we measure it?"</p>
+        </div>
+
+        <div class="containerInformation">
+            <h1 class="information">Sustainability</h1>
+            <div class="information">
+                <p>"What is sustainability and how do we measure it? Sustainability is the capacity to endure in a relatively ongoing way across various domains of life. Sustainability has also been described as "meeting the needs of the present generation
+                    without compromising the ability of future generations to meet their needs" (Brundtland, 1987). But how do we measure sustainability if this concept of “needs” isn’t measurable?<br><br>In our project we measured sustainability by having
+                    people fill in a form. Based on those results we calculated how sustainable a project is. Sustainability in our case is based on people’s opinions. This may be off from reality, but this is what our client asked from us.<br><br>Our
+                    form was based on 5 parts we wanted people's opinion of.
+                    <ul>
+                        <li>Job opportunities</li>
+                        <li>Innovation and infrastructure</li>
+                        <li>Sustainable cities and communities</li>
+                        <li>Life below water</li>
+                        <li>life on land</li>
+                    </ul>
+                    <br><br> To get a reliable result we needed at least 20 answers. This number has been reached far and beyond. In our calculations we gave every question a total of 10 points. The average rating of a question was its total points. We
+                    sum all those results and divided them by the total number of answers we got the average sustainability rating of people. This will be the sustainability percentage which is displayed on our website. After that there will be a grade
+                    automatically displayed underneath the percentage.<br><br>
+                    <ul>
+                        <li>A = everything above and equal to 85%</li>
+                        <li>B = everything between 84% and 70%</li>
+                        <li>C = everything between 69% and 55%</li>
+                        <li>D = everything between 54% and 40%</li>
+                        <li>E = everything between 39% and 25%</li>
+                        <li>F = everything below 25%</li>
+                    </ul>
+                    <br><br> Our opinion is that a project should be at least 75% sustainable if the client wants to go through with it. We think that a project that has at least 55% sustainability is also a good enough project if the creators improve
+                    the points where the project scored poorly.
+                </p>
+            </div>
         </div>
         <!-- <div class="footer">
             <p>test</p>
