--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="https://architectenweb.nl/media/illustrations/2019/11/f07a774e-e332-46ea-a5c2-386ecd7b06e2_400.jpg" class="imgProject" alt="Project">
+    <img src="../assets/images/logo_black.png" class="imgFlauna" alt="Project Flauna Logo">
     <div class="topBar">
         <div class="topBarButton">
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
@@ -24,29 +24,24 @@
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
             <a href="index.html" target="_self">Home</a>
-            <a href="project.html" target="_self">Project</a>
             <a href="sustainability.html" target="_self">Sustainability</a>
+            <a href="project.html" target="_self">Project</a>
             <a href="about.html" target="_self">About</a>
         </div>
         <!-- LINKS END-->
     </div>
 
-    <div class="introText-i">
+    <div class="introTextA">
         <h1>About Us</h1>
+        <p>"Who are we?"</p>
     </div>
-    <div>
-        <h1>About Us</h1>
-        <p>We are Theo Eversdijk, Teodor Ivanov, Jesse van den Bos, Leonard Zengen and Jochem Dijkdrent. We are all following educations of the HZ University Of Applied Sciences. Four of us are following HBO-ICT and one of us is following Technical Engineering
-            and Managment. We have all signed up for a project week and have gotten a project by Zeelenberg Architectuur. They want us to develop a tool to measure the degree of sustainability. We decided that the best way to give the project it's
-            <!--form-->we should make a website, because our group consists of four ICT students. And that's where you are right now!
+    <div class="containerInformation">
+        <h1 class="information">About Us</h1>
+        <p class="information">We are Theo Eversdijk, Teodor Ivanov, Jesse van den Bos, Leonard Zengen and Jochem Dijkdrent. Our team name is Flauna. We came up with the name Project Flaura by combining Flora with Fauna. Flora means 'flower' in latin, and is used to adress
+            all living plants and Flaura is used to adress all living animals. It is commonly used toghether as Flora and Flaura to adress all living things. We are all following educations of the HZ University Of Applied Sciences. Four of us are following
+            HBO-ICT and one of us is following Technical Engineering and Managment. We have all signed up for a project week and have gotten a project by Zeelenberg Architectuur. They want us to develop a tool to measure the degree of sustainability.
+            We decided that the best way to give the project it's shape we should make a website, because our group consists of four ICT students. And that's where you are right now!
         </p>
-    </div>
-
-
-
-
-    <div class="footer">
-        <p></p>
     </div>
 </body>
 
