--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
             <a href="index.html" target="_self">Home</a>
-            <a href="project.html" target="_self">Project</a>
             <a href="sustainability.html" target="_self">Sustainability</a>
+            <a href="project.html" target="_self">Project</a>
             <a href="about.html" target="_self">About</a>
         </div>
         <!-- LINKS END-->
     </div>
 
-    <div class="introText-i">
+    <div class="introText">
         <h1>Project Flauna</h1>
         <p>"Where intergration meets innovation"</p>
     </div>
 
     <footer>
-    <a href="https://www.zeelenbergarchitectuur.nl/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFLQmnNtwp5KA/company-logo_200_200/0/1519889084713?e=2159024400&v=beta&t=B5CTgpvebl1Wq9Rd6F8GhouSdeLm7Inr7LBdSghEgXk" class="zeelenbergLogo" alt="Zeelenberg Logo"></a>
-</footer>
+        <a href="https://www.zeelenbergarchitectuur.nl/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFLQmnNtwp5KA/company-logo_200_200/0/1519889084713?e=2159024400&v=beta&t=B5CTgpvebl1Wq9Rd6F8GhouSdeLm7Inr7LBdSghEgXk" class="zeelenbergLogo" alt="Zeelenberg Logo"></a>
+    </footer>
 
 </body>
 
