--- a/project.html
+++ b/project.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- <link rel="stylesheet" href="./assets/css/tabStyles.css"> -->
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
     <link rel="icon" href="./assets/images/logo.png">
     <meta charset="UTF-8">
@@ -16,28 +15,32 @@
     <img src="../assets/images/project.png" class="imgProject" alt="Project">
     <header class="topBar">
         <div class="topBarButton">
+            <a href="index.html" target="_self"><img src="./assets/images/logo.png" class="logo" alt="Logo"></a>
             <div class="fa fa-bars" aria-hidden="true" style="font-size:30px;cursor: pointer" onclick="toggleNav()">
             </div>
         </div>
 
-        <a href="index.html" target="_self"><img src="./assets/images/logo.png" class="logo" alt="Logo"></a>
+
 
         <!-- LINKS BEGIN-->
         <div id="mySidebar" class="sidebar">
             <a href="index.html" target="_self">Home</a>
-            <a href="project.html" target="_self">Project</a>
             <a href="sustainability.html" target="_self">Sustainability</a>
+            <a href="project.html" target="_self">Project</a>
             <a href="about.html" target="_self">About</a>
         </div>
         <!-- LINKS END-->
     </header>
 
     <div class="face">
-        <div class="containerLayout">
-            <div class="introText-p">
+        <div>
+            <div class="introTextP">
                 <h1>Project Leenheerenpolder</h1>
                 <p>Sustainability: <span id="percentage">70</span>%</p>
                 <p>Grade:<span id="grade" class="limegreen"></span></p>
+                <p class="right">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScBF-IeIOnjZV-jxzF9GxML21FldDLmvceScCe1Ob8nM32jzQ/viewform?usp=sf_link" target="_blank"><img src="./assets/images/qr.png" class="QRCode" alt="Form QR Code"></a>
+                </p>
             </div>
         </div>
 
@@ -52,12 +55,11 @@
                 are less able to take care of themselves will be cared for. This creates job opportunities without nature being seriously inconvenienced by, for example, noise pollution.
                 <br><br> The tidal nature which is located at the bottom side of the land will be a non-human area. There will be a pathway around the area, but there won't be any human interference (apart from some outposts to watch birds) in this piece
                 of land. The idea behind this part is to let nature take care of itself and give the land a new purpose, a home for animals. To make this place livable for animals we need to transform the current landscape. By adding some tree’s, rivers
-                and maybe a small lake, animals will feel like home and hopefully reproduce so there will be more wildlife in this area.<br><br> To strengthen the dyke there will be a pathway/road where people can walk/ ride around the area. To actually
+                and maybe a small lake, animals will feel like home and hopefully reproduce so there will be more wildlife in this area.<br><br> To strengthen the dyke there will be a pathway/road where people can walk or ride around the area. To actually
                 realise this plan there is a need to reinforce the current dyke. If possible there will be a dam added too so it can regulate the water and keep everything inside the area protected.</p>
         </div>
     </div>
 
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLScBF-IeIOnjZV-jxzF9GxML21FldDLmvceScCe1Ob8nM32jzQ/viewform?usp=sf_link" target="_blank"><img src="./assets/images/qr.png" class="QRCode" alt="Form QR Code"></a>
 </body>
 
 <script src="./assets/js/script.js "></script>
