about us patch up

--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
     </div>
     <div class="containerInformation">
         <h1 class="information">About Us</h1>
-        <p class="information">We are Theo Eversdijk, Teodor Ivanov, Jesse van den Bos, Leonard Zengen and Jochem Dijkdrent. Our team name is Flauna. We came up with the name Project Flaura by combining Flora with Fauna. Flora means 'flower' in latin, and is used to adress
-            all living plants and Flaura is used to adress all living animals. It is commonly used toghether as Flora and Flaura to adress all living things. We are all following educations of the HZ University Of Applied Sciences. Four of us are following
-            HBO-ICT and one of us is following Technical Engineering and Managment. We have all signed up for a project week and have gotten a project by Zeelenberg Architectuur. They want us to develop a tool to measure the degree of sustainability.
-            We decided that the best way to give the project it's shape we should make a website, because our group consists of four ICT students. And that's where you are right now!
+        <p class="information">We are Jesse van den Bos, Jochem Dijkdrent, Theo Eversdijk, Teodor Ivanov and Leonard Zengeni.<br>The name of our project is Flauna. We came up with this name by combining Flora with Fauna, which signifies our objective. Flora means 'flower' and Fauna means 'animal life'.
+            <br><br>We are all students at the HZ University Of Applied Sciences. Four of us are studying
+            HBO-ICT and one of us is studying Technical Engineering and Managment. <br>After signing up for the Projectweek "We Explore Together", we were given a project by Zeelenberg Architectuur - develop a tool to measure the degree of sustainability.
+            <br>We decided that the best way to visualise our project is by making a website, as our group consists of four ICT students.
         </p>
     </div>
 </body>
